@@ -1,3 +1,9 @@
+2002-01-05  Bruno Haible  <bruno@clisp.org>
+
+	* x-c.c (buflen): Make static.
+	* x-librep.c (buflen): Likewise.
+	* x-lisp.c (buflen): Likewise.
+
 2001-12-23  Bruno Haible  <bruno@clisp.org>
 
 	* msgexec.c (process_string): Use xsetenv instead of setenv.
